fix types order in main package.json

--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "main": "./dist/src/app.js",
   "exports": {
     ".": {
-      "default": "./dist/src/app.js",
-      "types": "./dist/src/app.d.ts"
+      "types": "./dist/src/app.d.ts",
+      "default": "./dist/src/app.js"
     },
     "./react": {
-      "default": "./dist/src/react/index.js",
-      "types": "./dist/src/react/index.d.ts"
+      "types": "./dist/src/react/index.d.ts",
+      "default": "./dist/src/react/index.js"
     },
     "./app-bridge": {
-      "default": "./dist/src/app-bridge.js",
-      "types": "./dist/src/app-bridge.d.ts"
+      "types": "./dist/src/app-bridge.d.ts",
+      "default": "./dist/src/app-bridge.js"
     }
   },
   "files": [
